--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 actix-web = "4.4.1"
 serde = { version = "1.0.195", features = ["derive"] }
 redis = { version = "0.24.0", features = ["tokio-comp"] }
+serde_json = "1.0.111"
