--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2021"
 actix-web = "4.4.1"
 tokio = "1.35.1"
 serde = { version = "1.0.195", features = ["derive"] }
-redis = { version = "0.24.0", features = ["tokio-comp"] }
+redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
 serde_json = "1.0.111"
 anyhow = "1.0.79"
