--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ serde = { version = "1.0.195", features = ["derive"] }
 redis = { version = "0.24.0", features = ["tokio-comp", "connection-manager"] }
 serde_json = "1.0.111"
 anyhow = "1.0.79"
+log = { version = "0.4.20", features = [] }
+env_logger = "0.11.1"
